--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ footer{text-align:center;padding:15px;font-size:13px;color:#777;}
 
 <section style="background:#fff;padding:15px;border-radius:12px;margin-bottom:20px;box-shadow:0 4px 10px rgba(0,0,0,0.08)">
   <h2>Submit Saluran WhatsApp</h2>
-  <p>⚠️ 1 link WhatsApp hanya bisa disubmit 1 kali (global)</p>
+  <p>1 link WhatsApp hanya bisa disubmit 1 kali, oke, jangan serakah</p>
 
   <input type="text" id="name" placeholder="Nama Saluran WhatsApp" style="width:100%;padding:10px;margin-bottom:8px">
   <input type="text" id="desc" placeholder="Deskripsi singkat saluran" style="width:100%;padding:10px;margin-bottom:8px">
