--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Direktori Saluran WhatsApp</title>
+</head>
 
-<style>
-*{box-sizing:border-box;font-family:Arial,Helvetica,sans-serif;}
-body{margin:0;background:#f2f4f8;}
-header{background:#25D366;color:white;padding:20px;text-align:center;}
-header h1{margin:0;font-size:26px;}
-header p{margin-top:6px;opacity:0.9;}
-.container{max-width:900px;margin:20px auto;padding:15px;}
-.search-box{margin-bottom:20px;}
-.search-box input{width:100%;padding:12px;font-size:16px;border-radius:8px;border:1px solid #ccc;}
-.channel-list{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));gap:15px;}
-.card{background:white;border-radius:12px;padding:15px;box-shadow:0 4px 10px rgba(0,0,0,0.08);text-align:center;position:relative;}
-.card h3{margin:0 0 8px;}
-.card p{font-size:14px;color:#555;}
-.card a{display:inline-block;margin-top:10px;text-decoration:none;background:#25D366;color:white;padding:8px 12px;border-radius:6px;font-size:14px}
-.delete-btn{
-  position:absolute;
+  <body>
+   <h1>Direktori Saluran WhatsApp Aktif Indonesia</h1>
+
+<p>
+Direktori WA adalah platform yang menyediakan kumpulan saluran WhatsApp aktif Indonesia dari berbagai kategori seperti edukasi, hiburan, bisnis, dan teknologi. Website ini dibuat untuk memudahkan pengguna menemukan saluran WhatsApp yang sesuai dengan minat mereka secara cepat dan gratis.
+</p>
+
+<p>
+Melalui Direktori WA, pengguna dapat menemukan saluran WhatsApp pilihan yang telah dikurasi. Setiap saluran diperiksa agar tetap aktif dan relevan sehingga pengguna mendapatkan pengalaman terbaik.
+</p> 
+  </body>
+</html>
+
+<stylele>{box-sizingnborder-boxofont-familylArialaHelveticacsans-serifi};body{margini0:backgroundnd:#f2f4f};header{backgroundnd:#25D36colorowhitetpaddingn20pxptext-aligngcentere};headereh1{margini0:font-sizez26pxp};headerep{margin-topo6pxpopacityt0.9.};}container{max-widtht900pxpmargini20pxpautotpaddingn15pxp};}search-box{margin-bottomo20pxp};}search-boxoinput{widtht100%0paddingn12pxpfont-sizez16pxpborder-radiusu8pxpbordere1pxpsolidid #cc};}channel-list{displayagridigrid-template-columnsnrepeat(auto-filllminmax(250pxp1fr)))gapa15pxp};}card{backgroundnwhitetborder-radiusu12pxppaddingn15pxpbox-shadowo0:4pxp10pxprgba(0(0,0,0.08)8text-aligngcenterepositionorelativev};}cardrh3{margini0:0 8pxp};}cardrp{font-sizez14pxpcoloror:#55};}cardra{displayainline-blockcmargin-topo10pxptext-decorationononenbackgroundnd:#25D36colorowhitetpaddingn8pxp12pxpborder-radiusu6pxpfont-sizez14px}x}delete-btn{n{ position:absolute;
   top:10px;
   right:10px;
   background:#ff4d4d;
